Fix spacing of text below banner

--- a/src/pages/Checkout.css
+++ b/src/pages/Checkout.css
@@ -14,9 +14,6 @@
 
 .text-left {
     text-align: left;
-}
-
-h2 {
     padding: 0;
     margin: 0;
 }
